--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,6 @@ test:
 
 production:
   adapter: async
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: https://myapp20210213.herokuapp.com/
   channel_prefix: myapp_production
